# MY_RAT

RAT(GUI)/Agent/: Cargo.toml
RAT(GUI)/Agent/src/: main.rs
RAT(GUI)/Agent/src/network/: local.rs  mod.rs  protocol.rs
RAT-0.1/Agent/: Cargo.toml
RAT-0.1/Server/: Rest_API_Server.py
RAT-0.1/Server/agents/: 88463253-2f11-457b-a22d-ceb4be72b778.json
RAT-0.1/Server/templates/: command_page.html  main.html
