[package]
name = "Agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"
winapi = "0.3.9"
windows = { version = "0.59", features = [
"Win32_System_Variant",
"Win32_Foundation",
"Win32_System_Com",
"Win32_System_WindowsProgramming",
"Win32_UI_WindowsAndMessaging",
"Win32_System_Registry",
"Win32_System_Ole",
"Win32_UI_Shell",
] }